k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scoutnet-membership-manager
spec:
  selector:
    app: scoutnet-membership-manager
  ports:
    - port: 80
      targetPort: 8000
